# appraiser-photo-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  bot.py  cli.py  config.py  docker-compose.yml  handlers.py  keyboards.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pyci.yml
appraiser_photo_bot/: __init__.py  bot.py  config.py  handlers.py  keyboards.py
appraiser_photo_bot/document_creators/: __init__.py  constants.py  document_base.py  document_creator.py  messages.py  temp_manager.py  utils.py
document_creators/: __init__.py  constants.py  document_base.py  document_creator.py  messages.py  temp_manager.py  utils.py
